# sentri

./: .windsurfrules  Cargo.toml  README  README.md  TODO.md  benchmark.sh  build.sh  example_domains.txt
.github/workflows/: ci-cd.yml
scripts/: release.sh
src/: cli.rs  core.rs  dns.rs  http.rs  lib.rs  main.rs  rate_limit.rs  retry.rs  sanitize.rs  validation.rs  xml.rs
tests/: cli_tests.rs  core_integration_tests.rs  core_tests.rs  debug_xml.rs  dns_tests.rs  http_tests.rs  rate_limit_tests.rs  retry_tests.rs  validation_tests.rs  xml_tests.rs
