[package]
name = "sentri"
version = "0.1.0"
edition = "2021"
description = "High-performance Microsoft Defender for Identity instance discovery tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/sentri"
keywords = ["security", "mdi", "microsoft", "defender", "azure"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "sentri"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
trust-dns-resolver = "0.23"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
arc-swap = "1.6"
rayon = "1.8"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"